Add useful information on gc in java and g1gc (#54)